utility/log/log.txt
[  2024-03-10 11:12:35.295422  ] : Env Virble changed to Development
[  2024-03-10 11:12:35.296133  ] : Using db folder....
[  2024-03-10 11:12:35.297844  ] : table USERS already exists
[  2024-03-10 11:12:35.298924  ] : Falied to Add the User: Email=omerkemal2019@gmail.com , Password=DEVILO.K
[  2024-03-10 11:12:35.301194  ] : Login Falied: Email=ufuhihii8h6 , Password=yfiyihi9u
[  2024-03-10 11:12:35.301944  ] : Login Successfully: Email=omerkemal2019@gmail.com , Password=DEVILO.K
[  2024-03-11 10:22:21.688540  ] : Env Virble changed to Development
[  2024-03-11 10:22:21.688945  ] : Using db folder....
[  2024-03-11 10:22:21.689861  ] : table USERS already exists
[  2024-03-11 10:22:21.690565  ] : Falied to Add the User: Email=omerkemal2019@gmail.com , Password=DEVILO.K
[  2024-03-11 10:22:21.691056  ] : Login Falied: Email=ufuhihii8h6 , Password=yfiyihi9u
[  2024-03-11 10:22:21.691419  ] : Login Successfully: Email=omerkemal2019@gmail.com , Password=DEVILO.K
[  2024-04-13 04:51:32.717274  ] : Env Virble changed to Development
[  2024-04-13 04:51:32.766308  ] : Using db folder....
[  2024-04-13 04:51:33.635831  ] : Using db folder....
[  2024-04-13 04:51:33.642836  ] : Database tables created successfully: path=db/
[  2024-04-13 04:51:33.807048  ] : Added User Successfully: Email=omerkemal2019@gmail.com , Password=DEVILO.K
[  2024-04-13 04:51:33.810049  ] : Login Falied: Email=ufuhihii8h6 , Password=yfiyihi9u
[  2024-04-13 04:51:33.812051  ] : Login Successfully: Email=omerkemal2019@gmail.com , Password=DEVILO.K
[  2024-05-22 20:48:00.143809  ] : Env Virble changed to Development
[  2024-05-22 20:48:03.344723  ] : Using db folder....
[  2024-05-22 20:48:06.919970  ] : table USERS already exists
[  2024-05-22 20:48:06.973006  ] : Falied to Add the User: Email=omerkemal2019@gmail.com , Password=DEVILO.K
[  2024-05-22 20:48:07.137123  ] : Login Falied: Email=ufuhihii8h6 , Password=yfiyihi9u
[  2024-05-22 20:48:07.171147  ] : Login Successfully: Email=omerkemal2019@gmail.com , Password=DEVILO.K
[  2024-06-03 16:37:05.478750  ] : Env Virble changed to Development
[  2024-06-03 16:37:05.583824  ] : Using db folder....
[  2024-06-03 16:37:07.160999  ] : Using db folder....
[  2024-06-03 16:37:07.212033  ] : Database tables created successfully: path=db/
[  2024-06-03 16:37:07.500872  ] : Added User Successfully: Email=omerkemal2019@gmail.com , Password=DEVILO.K
[  2024-06-03 16:37:07.514884  ] : Login Falied: Email=ufuhihii8h6 , Password=yfiyihi9u
[  2024-06-03 16:37:07.530894  ] : Login Successfully: Email=omerkemal2019@gmail.com , Password=DEVILO.K
[  2024-06-20 18:41:59.441531  ] : Env Virble changed to Development
[  2024-06-20 18:41:59.524596  ] : Using db folder....
[  2024-06-20 18:41:59.752779  ] : table USERS already exists
[  2024-06-20 18:41:59.767760  ] : Falied to Add the User: Email=omerkemal2019@gmail.com , Password=DEVILO.K
[  2024-06-20 18:41:59.779771  ] : Login Falied: Email=ufuhihii8h6 , Password=yfiyihi9u
[  2024-06-20 18:41:59.790785  ] : Login Successfully: Email=omerkemal2019@gmail.com , Password=DEVILO.K
[  2025-03-26 21:19:01.967931  ] : [Error] ocuer at /api_command method=GET ,error=getlist() missing 1 required positional argument: 'sp'
[  2025-03-26 21:21:00.446855  ] : [Error] ocuer at /api_command method=GET ,error=list.append() takes exactly one argument (2 given)
[  2025-03-26 21:30:46.847370  ] : [Error] ocuer at /api_command method=GET ,error=cannot access local variable 'command' where it is not associated with a value
[  2025-03-26 22:26:00.765628  ] : [Error] ocuer at /api_command method=GET ,error=list index out of range
[  2025-03-30 02:00:26.087569  ] : [Error] ocuer at /api_command method=POST ,error=__init__() missing 1 required positional argument: 'condition'
[  2025-04-16 21:13:05.670049  ] : [ERROR ROUT] : api.registor_target error: unsupported operand type(s) for +: 'NoneType' and 'str'
[  2025-04-16 21:32:05.566454  ] : [ERROR ROUT] : api.registor_target error: 400 Bad Request: The browser (or proxy) sent a request that this server could not understand.
[  2025-04-16 21:41:57.249691  ] : [ERROR ROUT] : api.registor_target error: list index out of range
[  2025-04-17 16:24:17.495849  ] : [ERROR ROUT] : api.get_instraction error: 'ImmutableMultiDict' object is not callable
[  2025-04-17 16:25:51.837760  ] : [ERROR ROUT] : api.instarction error: 'function' object is not subscriptable
[  2025-04-17 19:29:43.365598  ] : [ERROR ROUT] : api.instarction error: list index out of range
[  2025-04-23 15:11:22.879693  ] : [ERROR ROUT] : view.api_command error: block 'menus' defined twice
[  2025-05-19 15:37:37.509569  ] : [ERROR ROUT] : public.login error: Could not build url for endpoint 'view.profile'. Did you mean 'view.code' instead?
[  2025-05-26 15:54:34.615025  ] : [ERROR ROUT] : view.api_command error: name 'instractions' is not defined
[  2025-05-26 15:56:05.389106  ] : [ERROR ROUT] : view.api_command error: name 'target_name' is not defined
[  2025-05-26 16:03:14.009567  ] : [ERROR ROUT] : view.api_command error: (sqlite3.OperationalError) database is locked
[SQL: UPDATE "INSTRACTION" SET stutas=? WHERE "INSTRACTION".target_name = ? AND "INSTRACTION".instraction = ?]
[parameters: ('Active', 's02uJscoCD2025-05-2123:15:44.487282', 'connectToWeb')]
(Background on this error at: https://sqlalche.me/e/20/e3q8)
[  2025-05-26 16:20:04.701817  ] : [ERROR ROUT] : api.instarction error: 'str' object has no attribute 'update'
[  2025-05-26 21:44:02.437697  ] : [ERROR ROUT] : api.instarction error: Expecting value: line 1 column 1 (char 0)
[  2025-05-27 19:45:16.764859  ] : [ERROR ROUT] : api.apiCommand error: 'ImmutableMultiDict' object is not callable
[  2025-05-27 20:02:50.551560  ] : [ERROR ROUT] : api.apiCommand error: Query.filter() got an unexpected keyword argument 'token'
[  2025-05-29 21:01:19.903300  ] : [ERROR ROUT] : view.api_command error: Encountered unknown tag 'endfor'. You probably made a nesting mistake. Jinja is expecting this tag, but currently looking for 'elif' or 'else' or 'endif'. The innermost block that needs to be closed is 'if'.
[  2025-06-09 01:17:05.432086  ] : [ERROR ROUT] : view.check_commads_updates error: This session is in 'prepared' state; no further SQL can be emitted within this transaction.
[  2025-06-09 01:25:38.257133  ] : [ERROR ROUT] : view.check_commads_updates error: list index out of range
[  2025-06-09 03:14:34.284982  ] : [ERROR ROUTE] : view.check_commads_updates error: 'APICommand' object has no attribute 'id'[  2025-06-09 03:14:53.254715  ] : [ERROR ROUTE] : view.check_commads_updates error: 'APICommand' object has no attribute 'id'
[  2025-06-12 15:05:25.436719  ] : [ERROR ROUT] : view.api_command error: readFromJson() missing 2 required positional arguments: 'section' and 'sebSection'
[  2025-06-21 23:54:54.665710  ] : [ERROR ROUT] : view.api_command error: 'kmwMqamfiF2025-06-1115:27:48.411195'
[  2025-07-12 21:00:52.230147  ] : [ERROR ROUT] : public.login error: (sqlite3.OperationalError) no such table: USERS
[SQL: SELECT "USERS".email AS "USERS_email", "USERS".password AS "USERS_password" 
FROM "USERS" 
WHERE "USERS".email = ? AND "USERS".password = ?
 LIMIT ? OFFSET ?]
[parameters: ('omerkemal2019@gmail.com', '12345678', 1, 0)]
(Background on this error at: https://sqlalche.me/e/20/e3q8)
[  2025-07-16 22:30:20.647915  ] : [ERROR ROUTE] : view.check_command_update -> This session is in 'prepared' state; no further SQL can be emitted within this transaction.
[  2025-07-17 01:22:25.562401  ] : [ERROR ROUT] : view.api_command error: '25mAdwCRbg2025-07-1701:21:59.357892'
[  2025-07-17 21:21:25.315966  ] : [ERROR ROUT] : view.setting error: Encountered unknown tag 'endblock'. You probably made a nesting mistake. Jinja is expecting this tag, but currently looking for 'endfor' or 'else'. The innermost block that needs to be closed is 'for'.
[  2025-07-17 23:57:30.402622  ] : [ERROR ROUT] : view.update_user_info error: 'ImmutableMultiDict' objects are immutable
Traceback (most recent call last):
  File "c:\Users\hacker\PycharmProjects\oh-tool\view\view.py", line 495, in update_user_info
    email = request.form['email'] = request.form['email']
            ~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\hacker\PycharmProjects\oh-tool\.venv\Lib\site-packages\werkzeug\datastructures\mixins.py", line 133, in __setitem__
    _immutable_error(self)
    ~~~~~~~~~~~~~~~~^^^^^^
  File "C:\Users\hacker\PycharmProjects\oh-tool\.venv\Lib\site-packages\werkzeug\datastructures\mixins.py", line 20, in _immutable_error
    raise TypeError(f"{type(self).__name__!r} objects are immutable")
TypeError: 'ImmutableMultiDict' objects are immutable

[  2025-07-18 00:04:34.851931  ] : [ERROR ROUT] : view.update_user_info error: cannot access local variable 'user' where it is not associated with a value
Traceback (most recent call last):
  File "c:\Users\hacker\PycharmProjects\oh-tool\view\view.py", line 496, in update_user_info
    old_password = bcrypt.checkpw(request.form['old_password'].encode('utf-8'), user.password.encode('utf-8'))
                                                                                ^^^^
UnboundLocalError: cannot access local variable 'user' where it is not associated with a value

